# rlhf_lab

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: run_dummy_unirlhf_eval.py  run_unirlhf_all_methods_tiny_gpt2.py
test_data/: comparisons.jsonl  injection_base_prompts.jsonl  pref_train.jsonl  prompts.jsonl  sft_train.jsonl
tests/: test_unirlhf_basic_flow.py  test_unirlhf_train_smoke.py
tests/integration/: test_unirlhf_train_smoke.py
unirlhf/: __init__.py
unirlhf/data/: __init__.py  schemas.py
unirlhf/eval/: __init__.py  compute_efficiency.py  lm_basic_metrics.py  preference_winrate.py  reward_alignment.py  robustness_injection.py  runner.py
unirlhf/models/: __init__.py  dummy.py  interfaces.py
unirlhf/train/: __init__.py  active_pl_trainer.py  datasets.py  dpo_trainer.py  ipo_trainer.py  orpo_trainer.py  ppo_trainer.py  rlaif_trainer.py  sft_trainer.py
