[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unirlhf"
version = "0.1.0"
description = "Unified RLHF training and evaluation lab (SFT / PPO / DPO / IPO / ORPO / RLAIF / Active PL)."
authors = [
  { name = "Rei Taguchi" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
  "torch",
  "transformers",
  "bert-score",
  "numpy",
  "pandas",
]

[project.urls]
Homepage = "https://github.com/REICHIYAN/unirlhf"
